@@ -1,3 +1,8 @@
+2024-07-10  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-intro.el (find-windows-beginner-intro): added a "sudo
+	apt-get update" and a "sudo apt-get upgrade -y".
+
 2024-07-08  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-intro.el (find-lean4-intro): rewritten completely.
